force-app/main/default/objects/ADM_Epic__c/fields/Committed_By_Team__c.field-meta.xml
<CustomField>
    <fullName>Committed_By_Team__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Committed By Team</label>
    <type>Checkbox</type>
</CustomField>