force-app/main/default/objects/ADM_Epic__c/fields/Design_Lead__c.field-meta.xml
<CustomField>
    <fullName>Design_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Design Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Design_Lead_Epics</relationshipName>
    <type>Lookup</type>
</CustomField>