force-app/main/default/objects/ADM_Epic__c/fields/Development_Lead__c.field-meta.xml
<CustomField>
    <fullName>Development_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Development Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Development_Lead_Epics</relationshipName>
    <type>Lookup</type>
</CustomField>