force-app/main/default/objects/ADM_Epic__c/fields/Health__c.field-meta.xml
<CustomField>
    <fullName>Health__c</fullName>
    <label>Health</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>On Track</fullName>
                <color>#419249</color>
                <default>true</default>
                <label>On Track</label>
            </value>
            <value>
                <fullName>Watch</fullName>
                <color>#F3D904</color>
                <label>Watch</label>
            </value>
            <value>
                <fullName>Blocked</fullName>
                <color>#CC0000</color>
                <label>Blocked</label>
            </value>
            <value>
                <fullName>Not Started</fullName>
                <color>#DDDDDD</color>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>On Hold</fullName>
                <color>#996633</color>
                <label>On Hold</label>
            </value>
            <value>
                <fullName>Completed</fullName>
                <color>#3366FF</color>
                <label>Completed</label>
            </value>
            <value>
                <fullName>Canceled</fullName>
                <color>#000000</color>
                <label>Canceled</label>
            </value>
            <value>
                <fullName>Green</fullName>
            </value>
            <value>
                <fullName>Yellow</fullName>
            </value>
            <value>
                <fullName>Red</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>