force-app/main/default/objects/ADM_Epic__c/fields/Milestone__c.field-meta.xml
<CustomField>
    <fullName>Milestone__c</fullName>
    <label>Milestone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Started building</fullName>
            </value>
            <value>
                <fullName>Contract Signed</fullName>
            </value>
            <value>
                <fullName>SR passed</fullName>
            </value>
            <value>
                <fullName>First Report</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>