force-app/main/default/objects/ADM_Epic__c/fields/PAMs__c.field-meta.xml
<CustomField>
    <fullName>PAMs__c</fullName>
    <label>PAM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PAMs</valueSetName>
    </valueSet>
</CustomField>