force-app/main/default/objects/ADM_Epic__c/fields/Performance_Lead__c.field-meta.xml
<CustomField>
    <fullName>Performance_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Performance Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Performance_Lead_Epics</relationshipName>
    <type>Lookup</type>
</CustomField>