force-app/main/default/objects/ADM_Epic__c/fields/Quality_Lead__c.field-meta.xml
<CustomField>
    <fullName>Quality_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quality Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quality_Lead_Epics</relationshipName>
    <type>Lookup</type>
</CustomField>